--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ header {
   align-items: center;
   box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.1);
 }
+.menu_icon {
+  display: none;
+}
 .logo {
   width: 6.80581rem;
   height: 2.5625rem;
@@ -38,6 +41,10 @@ header nav .nav_items_container li {
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
+  font-family: "Poppins", sans-serif;
+}
+header nav .nav_items_container .active {
+  color: #39db4a;
 }
 header nav .nav_items_container li img {
   margin-top: 0.25rem;
@@ -91,6 +98,7 @@ header .third_section button {
   color: #fff;
   font-size: 1.25rem;
   font-weight: 500;
+  font-family: "Poppins", sans-serif;
 }
 header .third_section button img {
   width: 1.5rem;
@@ -198,6 +206,7 @@ header .third_section button img {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 2.5rem;
 }
 .popular_categories_card {
@@ -524,3 +533,576 @@ footer .socialmedia_icons img {
   font-weight: 500;
 }
 /* footer ends here */
+
+@media only screen and (max-width: 1550px) {
+  /* banner section starts here */
+  .banner_first_section_buttons {
+    margin-top: 4.4rem;
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+  }
+  .banner_first_section .order_btn {
+    font-size: 1.5rem;
+    width: 11.5rem;
+    height: 3.85rem;
+  }
+  .banner_first_section .watch_text {
+    font-size: 1.5rem;
+  }
+  .banner_first_section .playButton_container {
+    width: 4.5rem;
+    height: 4.5rem;
+  }
+  .banner_first_section .playButton_container img {
+    width: 2rem;
+    height: 2rem;
+  }
+  .banner_second_section img {
+    width: 42rem;
+    height: auto;
+  }
+  /* banner section ends here */
+
+  /* special dishes starts here */
+  .special_dishes {
+    margin-top: 10rem;
+  }
+  .buttons_container img {
+    width: 4rem;
+    height: 4rem;
+  }
+  .special_dishes_card_container {
+    margin-top: 3.25rem;
+    flex-wrap: wrap;
+    gap: 2.25rem;
+  }
+  /* special dishes ends here */
+
+  /* testimonials starts here */
+  .testimonials {
+    margin-top: 12rem;
+    gap: 4rem;
+  }
+  .testimonials .image_container {
+    margin-left: 0;
+  }
+  .testimonials .image_container img {
+    width: 32rem;
+    height: auto;
+  }
+  /* testimonials ends here */
+
+  /* story & services starts here */
+  .storyServices {
+    margin-top: 12rem;
+    gap: 4rem;
+  }
+  /* story & services ends here */
+}
+
+@media only screen and (max-width: 1330px) {
+  /* header starts here */
+  header {
+    height: 6.25rem;
+    padding: 0 5%;
+  }
+  .menu_icon {
+    display: block;
+    width: 2.25rem;
+    height: 2.25rem;
+    cursor: pointer;
+  }
+  .logo {
+    margin-left: 2rem;
+  }
+  header nav {
+    display: none;
+    margin: 0;
+    position: fixed;
+    top: 6.25rem;
+    left: 0;
+    width: 100%;
+    background: #fcfcfc;
+    padding: 1rem 0;
+    z-index: 1;
+    box-shadow: 0px 50px 50px 0px rgba(0, 0, 0, 0.1);
+  }
+  header nav .nav_items_container {
+    width: 100%;
+    flex-direction: column;
+    gap: 2rem;
+    justify-content: center;
+  }
+  header .third_section {
+    gap: 1.5rem;
+  }
+  header .third_section button {
+    width: 11rem;
+    height: 3.5rem;
+    gap: 0.75rem;
+    font-size: 1rem;
+  }
+  header .third_section button img {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
+  /* header starts here */
+
+  /* banner section starts here */
+  .banner_section {
+    padding: 2rem 5% 0 5%;
+    justify-content: center;
+    flex-direction: column;
+    gap: 3rem;
+  }
+  .banner_first_section_buttons {
+    margin-top: 3rem;
+  }
+  .banner_second_section img {
+    width: 38rem;
+    height: auto;
+  }
+  /* banner section ends here */
+
+  /* popular categories starts here */
+  .popular_categories {
+    margin-top: 8rem;
+    padding: 0 5%;
+  }
+  .label_text {
+    font-size: 1rem;
+  }
+  .heading_text {
+    font-size: 3rem;
+  }
+  .popular_categories_card_container {
+    margin-top: 4rem;
+  }
+  .popular_categories_card {
+    max-width: 18rem;
+    height: 18rem;
+    width: 100%;
+  }
+  .popular_categories_card .image_container {
+    width: 9rem;
+    height: 9rem;
+  }
+  .popular_categories_card .image_container img {
+    max-width: 8rem;
+    max-height: 6rem;
+  }
+  .popular_categories_card h3 {
+    font-size: 1.5rem;
+  }
+  .popular_categories_card p {
+    font-size: 1.2rem;
+  }
+  /* popular categories ends here */
+
+  /* special dishes starts here */
+  .special_dishes {
+    padding: 0 5%;
+  }
+  .buttons_container {
+    gap: 2rem;
+  }
+  .buttons_container img {
+    width: 3.5rem;
+    height: 3.5rem;
+  }
+  .special_dishes_card_container {
+    margin-top: 3rem;
+    gap: 2rem;
+  }
+  .special_dishes_card {
+    max-width: 27rem;
+    width: 100%;
+    height: 32rem;
+    padding: 1.85rem 2.5rem;
+  }
+  .special_dishes_card .favourite {
+    width: 5rem;
+    height: 4rem;
+  }
+  .special_dishes_card .favourite img {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
+  .special_dishes_card h3 {
+    margin-top: 1.85rem;
+    font-size: 1.575rem;
+  }
+  .special_dishes_card p {
+    margin-top: 1rem;
+    font-size: 1.2rem;
+  }
+  .special_dishes_card .price_section h4 {
+    font-size: 1.575rem;
+  }
+  .special_dishes_card .price_section h4 span {
+    font-size: 1.25rem;
+  }
+  .special_dishes_card .price_section .rating {
+    font-size: 1.25rem;
+  }
+  .special_dishes_card .price_section .rating img {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
+  /* special dishes ends here */
+
+  /* testimonials starts here */
+  .testimonials {
+    padding: 0 5%;
+    flex-wrap: wrap-reverse;
+  }
+  .testimonials .image_container img {
+    width: 30rem;
+  }
+  .testimonials .content_section {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  .para_text {
+    font-size: 1.5rem;
+  }
+  .testimonials .customers {
+    margin-top: 3rem;
+  }
+  .testimonials .customers .profiles {
+    max-width: 10rem;
+  }
+  .testimonials .feedback_heading {
+    font-size: 1.5rem;
+  }
+  .testimonials .feedback_section {
+    margin-top: 0.75rem;
+    gap: 0.5rem;
+    font-size: 1.25rem;
+  }
+  .testimonials .feedback_section p {
+    font-size: 1.25rem;
+  }
+  /* testimonials ends here */
+
+  /* story & services starts here */
+  .storyServices {
+    margin-top: 10rem;
+    padding: 0 5%;
+    flex-direction: column;
+  }
+  .storyServices p {
+    margin-top: 2rem;
+    font-size: 1.5rem;
+  }
+  .storyServices button {
+    margin-top: 2.5rem;
+    width: 13rem;
+    height: 4.5rem;
+    font-size: 1.5rem;
+  }
+  .storyServices_card_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
+  }
+  /* story & services ends here */
+
+  /* footer starts here */
+  footer {
+    margin-top: 8rem;
+    padding: 4rem 5% 2rem 5%;
+  }
+  .footer_first_section {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 4rem;
+  }
+  footer .first img {
+    width: 6.80581rem;
+    height: 2.5625rem;
+  }
+
+  footer .first p,
+  .footer_items li {
+    margin-top: 2rem;
+    font-size: 1.25rem;
+  }
+  footer .first p {
+    max-width: auto;
+  }
+  .footer_items li {
+    text-align: center;
+  }
+  .footer_heading {
+    font-size: 1.5rem;
+  }
+  .footer_second_section {
+    margin-top: 4rem;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
+  }
+  .footer_second_section span {
+    margin-left: 0;
+    font-size: 1.275rem;
+  }
+  /* footer ends here */
+}
+
+@media only screen and (max-width: 600px) {
+  /* header starts here */
+  .menu_icon {
+    display: block;
+    width: 2.25rem;
+    height: 2.25rem;
+    cursor: pointer;
+  }
+  .logo {
+    margin-left: 1rem;
+  }
+  header nav {
+    top: 9.5rem;
+  }
+  header .third_section {
+    display: none;
+    margin-left: 0;
+    position: fixed;
+    top: 6.25rem;
+    left: 0;
+    width: 100%;
+    background: #fcfcfc;
+    justify-content: center;
+    gap: 2rem;
+  }
+  header .third_section button {
+    width: 8rem;
+    height: 2.8rem;
+    gap: 0.5rem;
+    font-size: 0.85rem;
+  }
+  header .third_section button img {
+    width: 1rem;
+    height: 1rem;
+  }
+  /* header starts here */
+
+  /* banner section starts here */
+  .banner_first_section h1 {
+    font-size: 2.85rem;
+  }
+  .banner_first_section p {
+    margin-top: 2rem;
+    font-size: 1rem;
+  }
+  .banner_first_section_buttons {
+    margin-top: 2rem;
+    gap: 1.5rem;
+  }
+  .banner_first_section .order_btn {
+    font-size: 1rem;
+    width: 8rem;
+    height: 3rem;
+  }
+  .banner_first_section .watch_text {
+    font-size: 1rem;
+  }
+  .banner_first_section .playButton_container {
+    width: 3rem;
+    height: 3rem;
+  }
+  .banner_first_section .playButton_container img {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  .banner_second_section img {
+    max-width: 38rem;
+    width: 100%;
+    height: auto;
+  }
+  /* banner section ends here */
+
+  /* popular categories starts here */
+  .label_text {
+    font-size: 0.85rem;
+  }
+  .heading_text {
+    font-size: 2.25rem;
+    text-align: center;
+  }
+  .popular_categories_card_container {
+    margin-top: 3rem;
+    gap: 1.25rem;
+  }
+  .popular_categories_card h3 {
+    font-size: 1.25rem;
+  }
+  .popular_categories_card p {
+    font-size: 1rem;
+  }
+  /* popular categories ends here */
+
+  /* special dishes starts here */
+  .standout_text {
+    max-width: 36.25rem;
+    text-align: left;
+  }
+  .buttons_container {
+    display: none;
+  }
+  .special_dishes_card_container {
+    gap: 1.85rem;
+  }
+  .special_dishes_card {
+    width: 100%;
+    height: 30rem;
+    padding: 1.5rem 2rem;
+  }
+  .special_dishes_card .favourite {
+    width: 4rem;
+    height: 3.5rem;
+  }
+  .special_dishes_card .image_container {
+    width: 100%;
+    display: grid;
+    place-items: center;
+  }
+  .special_dishes_card .image_container img {
+    max-width: 100%;
+  }
+  .special_dishes_card h3 {
+    margin-top: 1.85rem;
+    font-size: 1.5rem;
+  }
+  .special_dishes_card p {
+    margin-top: 0.875rem;
+    font-size: 1.125rem;
+  }
+  .special_dishes_card .price_section h4 {
+    font-size: 1.5rem;
+  }
+  .special_dishes_card .price_section h4 span {
+    font-size: 1.125rem;
+  }
+  .special_dishes_card .price_section .rating {
+    font-size: 1.125rem;
+  }
+  .special_dishes_card .price_section .rating img {
+    width: 1.125rem;
+    height: 1.125rem;
+  }
+  /* special dishes ends here */
+
+  /* testimonials starts here */
+  .testimonials {
+    margin-top: 8rem;
+  }
+  .testimonials .image_container {
+    display: grid;
+    place-items: center;
+  }
+  .testimonials .image_container img {
+    width: 100%;
+  }
+  .para_text {
+    font-size: 1.25rem;
+  }
+  .testimonials .customers {
+    margin-top: 2.85rem;
+    gap: 0.2rem;
+  }
+  .testimonials .customers .profiles {
+    max-width: 8rem;
+  }
+  .testimonials .feedback_heading {
+    font-size: 1rem;
+  }
+  .testimonials .feedback_section {
+    font-size: 1rem;
+  }
+  .testimonials .feedback_section .star {
+    width: 1rem;
+    height: 1rem;
+  }
+  .testimonials .feedback_section p {
+    font-size: 1rem;
+  }
+  /* testimonials ends here */
+
+  /* story & services starts here */
+  .storyServices {
+    margin-top: 8rem;
+  }
+  .storyServices p {
+    font-size: 1.25rem;
+  }
+  .storyServices button {
+    margin-top: 2rem;
+    width: 10rem;
+    height: 3.5rem;
+    font-size: 1.25rem;
+  }
+  .storyServices_card_container {
+    gap: 1.5rem;
+  }
+  .storyServices_card {
+    max-width: 17.3125rem;
+    width: 100%;
+    min-height: 18.57156rem;
+  }
+  .storyServices_card_container .storyServices_card img {
+    width: 3rem;
+    height: 3rem;
+  }
+  .storyServices_card_container .storyServices_card h4 {
+    margin-top: 1.85rem;
+    font-size: 1.25rem;
+    font-weight: 700;
+    text-transform: uppercase;
+  }
+  .storyServices_card_container .storyServices_card .para {
+    font-size: 1rem;
+    margin-top: 1rem;
+  }
+  /* story & services ends here */
+
+  /* footer starts here */
+  footer {
+    padding: 3rem 5% 1.5rem 5%;
+  }
+  .footer_first_section {
+    display: flex;
+    justify-content: center;
+  }
+  footer .first img {
+    width: 6rem;
+    height: 2rem;
+  }
+  footer .first p,
+  .footer_items li {
+    margin-top: 1rem;
+    font-size: 1rem;
+  }
+  .footer_heading {
+    font-size: 1.25rem;
+  }
+  .footer_second_section {
+    margin-top: 2.5rem;
+  }
+  .footer_second_section span {
+    font-size: 0.875rem;
+  }
+  footer .socialmedia_icons {
+    gap: 0.85rem;
+  }
+  footer .socialmedia_icons img {
+    width: 3rem;
+    height: 3rem;
+  }
+  /* footer ends here */
+}
