navbar ui just changed

--- a/style.css
+++ b/style.css
@@ -867,7 +867,10 @@ footer .socialmedia_icons img {
     margin-left: 1rem;
   }
   header nav {
-    top: 9.5rem;
+    top: 9.1rem;
+  }
+  header nav .nav_items_container li {
+    font-size: 1rem;
   }
   header .third_section {
     display: none;
